<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/body_ed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/body_hint"/>

    <EditText
        android:id="@+id/priority_ed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priority_hint"/>

    <Button
        android:text="@string/add_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="addNew" />

    <Button
        android:text="@string/getAll_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="getAll" />

    <TextView
        android:id="@+id/output_txt"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:hint="@string/output_hint"/>

</LinearLayout>
